Update package info

--- a/package.json
+++ b/package.json
@@ -1,21 +1,18 @@
 {
-  "name": "electron-quick-start",
+  "name": "freebox-remote",
   "version": "1.0.0",
-  "description": "A minimal Electron application",
+  "description": "A Freebox remote app",
   "main": "main.js",
   "scripts": {
     "start": "electron ."
   },
-  "repository": "https://github.com/electron/electron-quick-start",
+  "repository": "https://github.com/aschelch/freebox-remote",
   "keywords": [
-    "Electron",
-    "quick",
-    "start",
-    "tutorial",
-    "demo"
+    "freebox",
+    "free"
   ],
-  "author": "GitHub",
-  "license": "CC0-1.0",
+  "author": "Aurélien Schelcher",
+  "license": "MIT",
   "devDependencies": {
     "electron": "~1.8.2"
   }
